--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,6 @@
 
 @custom-variant dark (&:is(.dark *));
 
-/* body {
-  @apply bg-stone-950 text-white;
-} */
-
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
 
@@ -214,6 +210,6 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-[Comfortaa];
   }
 }
