--- a/src/index.css
+++ b/src/index.css
@@ -210,6 +210,6 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground font-[Comfortaa];
+    @apply bg-background text-foreground font-[Comfortaa] transition-colors;
   }
 }
